# pglab

./: .pre-commit-config.yaml  .python-version  .secrets.baseline  README.md  bootstrap.ps1  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: ADR-0002-engine-namespaced-fields.md
src/pglab/: __init__.py
